--- a/WordPress/Resources/ar.lproj/Localizable.strings
+++ b/WordPress/Resources/ar.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-09-29 13:54:08+0000 */
+/* Translation-Revision-Date: 2021-10-01 20:45:21+0000 */
 /* Plural-Forms: nplurals=6; plural=(n == 0) ? 0 : ((n == 1) ? 1 : ((n == 2) ? 2 : ((n % 100 >= 3 && n % 100 <= 10) ? 3 : ((n % 100 >= 11 && n % 100 <= 99) ? 4 : 5)))); */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: ar */
@@ -230,7 +230,7 @@ translators: Block name. %s: The localized block name */
 "%s converted to regular blocks" = "تم تحويل %s إلى مكوِّنات عادية";
 
 /* translators: %s: embed block variant's label e.g: \"Twitter\". */
-"%s embed block previews are coming soon" = "%s تتوافر معاينات مكوِّن التضمين قريبًا";
+"%s embed block previews are coming soon" = "ستتوفر ميزة معاينات مكوّن التضمين %s قريبًا";
 
 /* translators: %s: social link name e.g: \"Instagram\". */
 "%s has URL set" = "لدى %s عنوان URL معين";
@@ -239,7 +239,10 @@ translators: Block name. %s: The localized block name */
 "%s has no URL set" = "ليس لدى %s عنوان URL معين";
 
 /* translators: %s: embed block variant's label e.g: \"Twitter\". */
-"%s previews not yet available" = "ميزة معاينات %s ليس متاحاً بعد";
+"%s link" = "%s link";
+
+/* translators: %s: embed block variant's label e.g: \"Twitter\". */
+"%s previews not yet available" = "معاينات %s غير متاحة حتى الآن";
 
 /* translators: %s: social link name e.g: \"Instagram\". */
 "%s social icon" = "أيقونة %s الاجتماعية";
@@ -775,7 +778,8 @@ translators: Block name. %s: The localized block name */
    Verb. Approves a 2fa authentication challenge, and logs in a user. */
 "Approve" = "الموافقة";
 
-/* Title of approved Comments filter. */
+/* Button title for Approved comment state.
+   Title of approved Comments filter. */
 "Approved" = "تمّت الموافقة";
 
 /* VoiceOver accessibility hint, informing the user the button can be used to approve a comment */
@@ -1196,7 +1200,6 @@ translators: Block name. %s: The localized block name */
    Text displayed by the left navigation button title
    The title of a cancel button.
    Title for cancel action. Dismisses the action sheet.
-   Title of the cancel button in the modal presentation of the domain registration flow, used in Domains Dashboard.
    Title. Title of a cancel button. Tapping disnisses an alert.
    Verb. A button title.
    Verb. A button title. Tapping cancels an action.
@@ -1424,6 +1427,9 @@ translators: Block name. %s: The localized block name */
 
 /* Register Domain - Address information field City */
 "City" = "المدينة";
+
+/* Title of the card that starts the registration of a free domain with a paid plan, in the Domains Dashboard. */
+"Claim your free domain" = "Claim your free domain";
 
 /* Name of setting configured when a site uses a list of blog posts as its homepage */
 "Classic Blog" = "المدونة التقليدية";
@@ -2232,8 +2238,7 @@ translators: Block name. %s: The localized block name */
    User action to dismiss featured media options.
    User action to dismiss media options.
    Verb. Button title. Tapping dismisses a prmopt.
-   Verb. User action to dismiss error alert when failing to load media item.
-   Verb. User action to dismiss error alert when failing to share media. */
+   Verb. User action to dismiss error alert when failing to load media item. */
 "Dismiss" = "تجاهل";
 
 /* Accessibility description for the %@ step of Quick Start. Tapping this dismisses the checklist for that particular step. */
@@ -2271,6 +2276,9 @@ translators: Block name. %s: The localized block name */
 /* Noun. Title. Links to the Domains screen.
    Title for the Domains list */
 "Domains" = "النطاقات";
+
+/* Description for the first domain purchased with a free plan. */
+"Domains purchased on this site will redirect users to " = "Domains purchased on this site will redirect users to ";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
 "Don't have an account? _Sign up_" = "ليس لديك حساب؟ _تسجيل_";
@@ -2554,7 +2562,7 @@ translators: Block name. %s: The localized block name */
 "Email sent!" = "تم إرسال البريد الإلكتروني!";
 
 /* No comment provided by engineer. */
-"Embed block previews are coming soon" = "Embed block previews are coming soon";
+"Embed block previews are coming soon" = "ستتوفر ميزة معاينات مكوّن التضمين قريبًا";
 
 /* translators: accessibility text. %s: Embed caption. */
 "Embed caption. %s" = "قم بتضمين تسمية توضيحية. %s";
@@ -3125,7 +3133,7 @@ translators: Block name. %s: The localized block name */
 /* Appended to latest post summary text when the post does not have data. */
 "Get the ball rolling and increase your post views by sharing your post." = "ابدأ العمل وقم بزيادة مشاهدات مقالتك عن طريق مشاركة مقالتك.";
 
-/* Label of the button that starts the purchase of a the first redirected domain in the Domains Dashboard. */
+/* Title of the card that starts the purchase of the first redirected domain in the Domains Dashboard. */
 "Get your domain" = "احصل على نطاقك";
 
 /* Title of the second alert preparing users to grant permission for us to send them push notifications. */
@@ -3263,11 +3271,11 @@ translators: Block name. %s: The localized block name */
 /* H6 Aztec Style */
 "Heading 6" = "العنوان 6";
 
-/* Help button
-   Open editor help options */
+/* Help button */
 "Help" = "مساعدة";
 
 /* Link to Help section
+   Open editor help options
    Title of the 'Help & Support' screen within the 'Me' tab - used for spotlight indexing on iOS. */
 "Help & Support" = "المساعدة والدعم";
 
@@ -4537,6 +4545,9 @@ translators: Block name. %s: The localized block name */
 /* No comment provided by engineer. */
 "No preview available" = "لا توجد معاينة متاحة";
 
+/* String to display in place of the site address, in case it was not retrieved from the backend. */
+"No primary site address found" = "No primary site address found";
+
 /* A message title */
 "No recent posts" = "لا توجد مقالات حديثة";
 
@@ -4932,7 +4943,8 @@ translators: Block name. %s: The localized block name */
 /* Paste without Formatting Menu Item */
 "Paste without Formatting" = "اللصق من دون تنسيق";
 
-/* Status for Media object that is being processed locally.
+/* Button title for Pending comment state.
+   Status for Media object that is being processed locally.
    Title of pending Comments filter. */
 "Pending" = "انتظار";
 
@@ -5310,8 +5322,8 @@ translators: Block name. %s: The localized block name */
    Primary Web Site */
 "Primary Site" = "الموقع الرئيسي";
 
-/* Header of the primary site section in the Domains dashboard. */
-"Primary Site Address" = "عنوان الموقع الأساسي";
+/* Primary site address label, used in the site address section of the Domains Dashboard. */
+"Primary site address" = "Primary site address";
 
 /* Label for the privacy setting
    Privacy settings section header
@@ -5512,9 +5524,6 @@ translators: Block name. %s: The localized block name */
 /* Message shwon to confirm a publicize connection has been successfully reconnected. */
 "Reconnected" = "تمت إعادة الاتصال";
 
-/* Header of the redirected domains section in the Domains Dashboard. */
-"Redirected Domains" = "النطاقات المعاد توجيهها";
-
 /* Label for link title in Referrers stat. */
 "Referrer" = "توجيه";
 
@@ -5525,15 +5534,11 @@ translators: Block name. %s: The localized block name */
    The loading view button title displayed when an error occurred */
 "Refresh" = "تحديث";
 
-/* Action to redeem domain credit.
-   Navigation bar title of the free domain registration flow, used in the Domains Dashboard. */
+/* Action to redeem domain credit. */
 "Register Domain" = "تسجيل نطاق";
 
 /* Register Domain - Register Privately with Privacy Protection option title */
 "Register Privately with Privacy Protection" = "التسجيل بشكل خاص مع ميزة الحماية من الخصوصية";
-
-/* Label of the button that starts the registration of a free domain with a paid plan, in the Domains Dashboard. */
-"Register a free domain" = "تسجيل نطاق مجاني";
 
 /* Install Plugin dialog register domain button text
    Register domain - Title for the Register domain button
@@ -5670,6 +5675,9 @@ translators: Block name. %s: The localized block name */
 
 /* Notifications Reply Accessibility Identifier */
 "Reply Text" = "نص الرد";
+
+/* Provides hint that the screen displays a reply to a comment.%1$@ is a placeholder for the comment author that's been replied to.Example: Reply to Pamela Nguyen */
+"Reply to %1$@" = "Reply to %1$@";
 
 /* Placeholder text for replying to a comment */
 "Reply to comment…" = "الرد على التعليق...";
@@ -5963,6 +5971,9 @@ translators: Block name. %s: The localized block name */
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "زر البحث. نص الزر الحالي هو";
+
+/* title of the button that searches the first domain. */
+"Search for a domain" = "Search for a domain";
 
 /* No comment provided by engineer. */
 "Search input field." = "حقل إدخال البحث.";
@@ -6359,6 +6370,9 @@ translators: Block name. %s: The localized block name */
 /* Header for a single site, shown in Notification user profile. */
 "Site" = "الموقع";
 
+/* Title of the Domains Dashboard. */
+"Site Domains" = "Site Domains";
+
 /* Accessibility label for site icon button */
 "Site Icon" = "أيقونة الموقع";
 
@@ -6552,7 +6566,8 @@ translators: Block name. %s: The localized block name */
 /* Label for showing the available disk space quota available for media */
 "Space used" = "المساحة المستخدمة";
 
-/* Marks comment as spam.
+/* Button title for Spam comment state.
+   Marks comment as spam.
    Spam
    Title of spam Comments filter. */
 "Spam" = "مزعج";
@@ -7364,6 +7379,7 @@ translators: Block name. %s: The localized block name */
 "Transform block…" = "تحويل المكوِّن…";
 
 /* Accessibility label for trash buttons in nav bars
+   Button title for Trash comment state.
    Trash button title
    Trashes a comment
    Trashes the comment */
@@ -7514,9 +7530,6 @@ translators: Block name. %s: The localized block name */
 
 /* Notice title when following a site fails. */
 "Unable to follow site" = "غير قادر على متابعة الموقع";
-
-/* Error message displayed when we were unable to copy the URL for an item in the user's media library. */
-"Unable to get URL for media item." = "يتعذر الحصول على عنوان URL لعنصر الوسائط.";
 
 /* Title for No results full page screen displayedfrom pages list when there is no connection */
 "Unable to load pages right now." = "تعذّر تحميل الصفحات في الوقت الحالي.";
@@ -8320,7 +8333,7 @@ translators: Block name. %s: The localized block name */
 "We’ll walk you through the basics of building and growing your site" = "سنرشدك إلى أساسيات بناء موقعك وتنميته";
 
 /* translators: %s: embed block variant's label e.g: \"Twitter\". */
-"We’re working hard on adding support for %s previews. In the meantime, you can preview the embedded content on the page." = "نعمل بجد على إضافة دعم ميزة معاينات %s. وفي هذه الأثناء، يمكنك معاينة المحتوى المضمَّن في الصفحة.";
+"We’re working hard on adding support for %s previews. In the meantime, you can preview the embedded content on the page." = "نعمل بجد على إضافة الدعم ميزة معاينات %s. وفي هذه الأثناء، يمكنك معاينة المحتوى المضمَّن في الصفحة.";
 
 /* translators: %s: embed block variant's label e.g: \"Twitter\". */
 "We’re working hard on adding support for %s previews. In the meantime, you can preview the embedded content on the post." = "نعمل بجد على إضافة دعم ميزة معاينات %s. وفي هذه الأثناء، يمكنك معاينة المحتوى المضمَّن في المقالة.";
@@ -8618,6 +8631,9 @@ translators: Block name. %s: The localized block name */
 /* Message informing the user that all of their sites are currently hidden (singular) */
 "You have 1 hidden WordPress site." = "لديك موقع WordPress واحد مخفى.";
 
+/* Description for the first domain purchased with a paid plan. */
+"You have a free one-year domain registration with your plan" = "You have a free one-year domain registration with your plan";
+
 /* Message alert when attempting to delete site with purchases */
 "You have active premium upgrades on your site. Please cancel your upgrades prior to deleting your site." = "لديك ترقيات متميزة نشطة على موقعك. يرجى إلغاء ترقياتك قبل حذف موقعك.";
 
@@ -8694,6 +8710,9 @@ translators: Block name. %s: The localized block name */
 /* Header title for your domains section of Domains. */
 "Your Domains" = "النطاقات الخاصة بك";
 
+/* Header of the domains list section in the Domains Dashboard. */
+"Your Site Domains" = "Your Site Domains";
+
 /* The item to select during a guided tour. */
 "Your Site Icon" = "أيقونة موقعك";
 
@@ -8724,6 +8743,9 @@ translators: Block name. %s: The localized block name */
 /* Title for the view when there aren't any Backups to display */
 "Your first backup will be ready soon" = "ستكون نسختك الاحتياطية الأولى جاهزة قريبًا";
 
+/* Title of the site address section in the Domains Dashboard. */
+"Your free WordPress.com address is" = "Your free WordPress.com address is";
+
 /* Error message when picked media cannot be imported into stories. */
 "Your media could not be exported. If the problem persists you can contact us via the Me > Help & Support screen." = "لا يمكن تصدير ملفات الوسائط الخاصة بك. إذا استمرت المشكلة، يمكنك الاتصال بنا من خلال شاشة \"أنا\" > \"المساعدة والدعم\".";
 
@@ -8742,7 +8764,7 @@ translators: Block name. %s: The localized block name */
 /* Message of Export Content confirmation alert; substitution is user's email address */
 "Your posts, pages, and settings will be mailed to you at %@." = "سيتم إرسال المقالات والصفحات والإعدادات الخاصة بك لك عبر %@.";
 
-/* Footer of the primary site section in the Domains dashboard. */
+/* Footer of the primary site section in the Domains Dashboard. */
 "Your primary site address is what visitors will see in their address bar when visiting your website." = "عنوان الموقع الأساسي هو العنوان الذي سيراه الزائرون في شريط العناوين بمتصفحاتهم عند زيارة موقعك.";
 
 /* Text displayed when a site restore takes too long. */
