--- a/WordPress/Resources/ro.lproj/Localizable.strings
+++ b/WordPress/Resources/ro.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-09-23 09:20:28+0000 */
+/* Translation-Revision-Date: 2021-10-05 15:11:32+0000 */
 /* Plural-Forms: nplurals=3; plural=(n == 1) ? 0 : ((n == 0 || n % 100 >= 2 && n % 100 <= 19) ? 1 : 2); */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: ro */
@@ -230,13 +230,16 @@ translators: Block name. %s: The localized block name */
 "%s converted to regular blocks" = "%s a fost convertit în blocuri normale";
 
 /* translators: %s: embed block variant's label e.g: \"Twitter\". */
-"%s embed block previews are coming soon" = "%s embed block previews are coming soon";
+"%s embed block previews are coming soon" = "În curând, previzualizări pentru înglobarea blocului %s";
 
 /* translators: %s: social link name e.g: \"Instagram\". */
 "%s has URL set" = "%s are setat un URL";
 
 /* translators: %s: social link name e.g: \"Instagram\". */
 "%s has no URL set" = "%s nu are setat un URL";
+
+/* translators: %s: embed block variant's label e.g: \"Twitter\". */
+"%s link" = "Legătură la %s";
 
 /* translators: %s: embed block variant's label e.g: \"Twitter\". */
 "%s previews not yet available" = "Previzualizările %s nu sunt încă disponibile";
@@ -775,7 +778,8 @@ translators: Block name. %s: The localized block name */
    Verb. Approves a 2fa authentication challenge, and logs in a user. */
 "Approve" = "Aprobă";
 
-/* Title of approved Comments filter. */
+/* Button title for Approved comment state.
+   Title of approved Comments filter. */
 "Approved" = "Aprobat";
 
 /* VoiceOver accessibility hint, informing the user the button can be used to approve a comment */
@@ -1196,7 +1200,6 @@ translators: Block name. %s: The localized block name */
    Text displayed by the left navigation button title
    The title of a cancel button.
    Title for cancel action. Dismisses the action sheet.
-   Title of the cancel button in the modal presentation of the domain registration flow, used in Domains Dashboard.
    Title. Title of a cancel button. Tapping disnisses an alert.
    Verb. A button title.
    Verb. A button title. Tapping cancels an action.
@@ -1424,6 +1427,9 @@ translators: Block name. %s: The localized block name */
 
 /* Register Domain - Address information field City */
 "City" = "Oraș";
+
+/* Title of the card that starts the registration of a free domain with a paid plan, in the Domains Dashboard. */
+"Claim your free domain" = "Revendică-ți domeniul gratuit";
 
 /* Name of setting configured when a site uses a list of blog posts as its homepage */
 "Classic Blog" = "Blog clasic";
@@ -2232,8 +2238,7 @@ translators: Block name. %s: The localized block name */
    User action to dismiss featured media options.
    User action to dismiss media options.
    Verb. Button title. Tapping dismisses a prmopt.
-   Verb. User action to dismiss error alert when failing to load media item.
-   Verb. User action to dismiss error alert when failing to share media. */
+   Verb. User action to dismiss error alert when failing to load media item. */
 "Dismiss" = "Respinge";
 
 /* Accessibility description for the %@ step of Quick Start. Tapping this dismisses the checklist for that particular step. */
@@ -2271,6 +2276,9 @@ translators: Block name. %s: The localized block name */
 /* Noun. Title. Links to the Domains screen.
    Title for the Domains list */
 "Domains" = "Domenii";
+
+/* Description for the first domain purchased with a free plan. */
+"Domains purchased on this site will redirect users to " = "Domeniile cumpărate pentru acest site vor redirecționa utilizatorii la ";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
 "Don't have an account? _Sign up_" = "Nu ai un cont? _Sign up_";
@@ -3128,7 +3136,7 @@ translators: Block name. %s: The localized block name */
 /* Appended to latest post summary text when the post does not have data. */
 "Get the ball rolling and increase your post views by sharing your post." = "Dă-i drumul la treabă și asigură-te că mărești numărul de vizualizări ale articolului tău prin partajarea lui.";
 
-/* Label of the button that starts the purchase of a the first redirected domain in the Domains Dashboard. */
+/* Title of the card that starts the purchase of the first redirected domain in the Domains Dashboard. */
 "Get your domain" = "Ia-ți domeniul";
 
 /* Title of the second alert preparing users to grant permission for us to send them push notifications. */
@@ -3266,11 +3274,11 @@ translators: Block name. %s: The localized block name */
 /* H6 Aztec Style */
 "Heading 6" = "Subtitlu 6";
 
-/* Help button
-   Open editor help options */
+/* Help button */
 "Help" = "Ajutor";
 
 /* Link to Help section
+   Open editor help options
    Title of the 'Help & Support' screen within the 'Me' tab - used for spotlight indexing on iOS. */
 "Help & Support" = "Ajutor și suport";
 
@@ -3976,7 +3984,7 @@ translators: Block name. %s: The localized block name */
    Title for the Reader Manage screen.
    Verb. Text label. Tapping displays a screen where the user can configure 'share' buttons for third-party services.
    Verb. Title of the screen for managing sharing buttons and settings related to sharing. */
-"Manage" = "Gestionează";
+"Manage" = "Administrează";
 
 /* Jetpack Settings: Manage Connection
    Label for managing the Blog Jetpack Connection section
@@ -4540,6 +4548,9 @@ translators: Block name. %s: The localized block name */
 /* No comment provided by engineer. */
 "No preview available" = "Nu este disponibilă nicio previzualizare";
 
+/* String to display in place of the site address, in case it was not retrieved from the backend. */
+"No primary site address found" = "Nu am găsit nicio adresă principală pentru site";
+
 /* A message title */
 "No recent posts" = "Niciun articol recent";
 
@@ -4935,7 +4946,8 @@ translators: Block name. %s: The localized block name */
 /* Paste without Formatting Menu Item */
 "Paste without Formatting" = "Plasează fără formatare";
 
-/* Status for Media object that is being processed locally.
+/* Button title for Pending comment state.
+   Status for Media object that is being processed locally.
    Title of pending Comments filter. */
 "Pending" = "În așteptare";
 
@@ -5046,7 +5058,7 @@ translators: Block name. %s: The localized block name */
 "Please enter a valid address" = "Te rog introdu o adresă validă";
 
 /* Error message displayed when the user attempts use an invalid email address. */
-"Please enter a valid email address." = "Te rog să introduci o adresă validă de email ";
+"Please enter a valid email address." = "Te rog introdu o adresă de email validă.";
 
 /* Register Domain - Domain contact information validation error message for an input field */
 "Please enter a valid phone number" = "Te rog introdu un număr de telefon valid";
@@ -5313,8 +5325,8 @@ translators: Block name. %s: The localized block name */
    Primary Web Site */
 "Primary Site" = "Site principal";
 
-/* Header of the primary site section in the Domains dashboard. */
-"Primary Site Address" = "Adresă site principal";
+/* Primary site address label, used in the site address section of the Domains Dashboard. */
+"Primary site address" = "Adresă principală site";
 
 /* Label for the privacy setting
    Privacy settings section header
@@ -5515,9 +5527,6 @@ translators: Block name. %s: The localized block name */
 /* Message shwon to confirm a publicize connection has been successfully reconnected. */
 "Reconnected" = "Reconectat";
 
-/* Header of the redirected domains section in the Domains Dashboard. */
-"Redirected Domains" = "Domenii redirecționate";
-
 /* Label for link title in Referrers stat. */
 "Referrer" = "Referință";
 
@@ -5528,15 +5537,11 @@ translators: Block name. %s: The localized block name */
    The loading view button title displayed when an error occurred */
 "Refresh" = "Reîmprospătare";
 
-/* Action to redeem domain credit.
-   Navigation bar title of the free domain registration flow, used in the Domains Dashboard. */
+/* Action to redeem domain credit. */
 "Register Domain" = "Înregistrează domeniul";
 
 /* Register Domain - Register Privately with Privacy Protection option title */
 "Register Privately with Privacy Protection" = "Înregistrează-l public cu protecție de confidențialitate";
-
-/* Label of the button that starts the registration of a free domain with a paid plan, in the Domains Dashboard. */
-"Register a free domain" = "Înregistrează un domeniu gratuit";
 
 /* Install Plugin dialog register domain button text
    Register domain - Title for the Register domain button
@@ -5673,6 +5678,9 @@ translators: Block name. %s: The localized block name */
 
 /* Notifications Reply Accessibility Identifier */
 "Reply Text" = "Text pentru răspuns";
+
+/* Provides hint that the screen displays a reply to a comment.%1$@ is a placeholder for the comment author that's been replied to.Example: Reply to Pamela Nguyen */
+"Reply to %1$@" = "Răspunde-i lui %1$@";
 
 /* Placeholder text for replying to a comment */
 "Reply to comment…" = "Răspunde la comentariu...";
@@ -5966,6 +5974,9 @@ translators: Block name. %s: The localized block name */
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "Buton Căutare. Textul actual al butonului este";
+
+/* title of the button that searches the first domain. */
+"Search for a domain" = "Caută un domeniu";
 
 /* No comment provided by engineer. */
 "Search input field." = "Câmp de intrare pentru căutare.";
@@ -6362,6 +6373,9 @@ translators: Block name. %s: The localized block name */
 /* Header for a single site, shown in Notification user profile. */
 "Site" = "Site";
 
+/* Title of the Domains Dashboard. */
+"Site Domains" = "Domenii site";
+
 /* Accessibility label for site icon button */
 "Site Icon" = "Icon site";
 
@@ -6555,7 +6569,8 @@ translators: Block name. %s: The localized block name */
 /* Label for showing the available disk space quota available for media */
 "Space used" = "Spațiu folosit";
 
-/* Marks comment as spam.
+/* Button title for Spam comment state.
+   Marks comment as spam.
    Spam
    Title of spam Comments filter. */
 "Spam" = "Spam";
@@ -7367,6 +7382,7 @@ translators: Block name. %s: The localized block name */
 "Transform block…" = "Transformă blocul...";
 
 /* Accessibility label for trash buttons in nav bars
+   Button title for Trash comment state.
    Trash button title
    Trashes a comment
    Trashes the comment */
@@ -7517,9 +7533,6 @@ translators: Block name. %s: The localized block name */
 
 /* Notice title when following a site fails. */
 "Unable to follow site" = "Nu pot să urmăresc site-ul";
-
-/* Error message displayed when we were unable to copy the URL for an item in the user's media library. */
-"Unable to get URL for media item." = "Nu pot obține URL-ul pentru elementul media.";
 
 /* Title for No results full page screen displayedfrom pages list when there is no connection */
 "Unable to load pages right now." = "Nu pot să încarc pagini chiar acum.";
@@ -8621,6 +8634,9 @@ translators: Block name. %s: The localized block name */
 /* Message informing the user that all of their sites are currently hidden (singular) */
 "You have 1 hidden WordPress site." = "Ai un site WordPress ascuns.";
 
+/* Description for the first domain purchased with a paid plan. */
+"You have a free one-year domain registration with your plan" = "În planul tău ai o înregistrare gratuită pentru un domeniu în primul an";
+
 /* Message alert when attempting to delete site with purchases */
 "You have active premium upgrades on your site. Please cancel your upgrades prior to deleting your site." = "Ai actualizări premium active pe site. Te rog anulează actualizările înainte de a șterge site-ul.";
 
@@ -8697,6 +8713,9 @@ translators: Block name. %s: The localized block name */
 /* Header title for your domains section of Domains. */
 "Your Domains" = "Domeniile tale";
 
+/* Header of the domains list section in the Domains Dashboard. */
+"Your Site Domains" = "Domeniile site-ului tău";
+
 /* The item to select during a guided tour. */
 "Your Site Icon" = "Iconul site-ului tău";
 
@@ -8727,6 +8746,9 @@ translators: Block name. %s: The localized block name */
 /* Title for the view when there aren't any Backups to display */
 "Your first backup will be ready soon" = "Prima copie de siguranță va fi gata în curând";
 
+/* Title of the site address section in the Domains Dashboard. */
+"Your free WordPress.com address is" = "Adresa ta gratuită pentru WordPress.com este";
+
 /* Error message when picked media cannot be imported into stories. */
 "Your media could not be exported. If the problem persists you can contact us via the Me > Help & Support screen." = "Elementul media nu a putut fi exportat. Dacă problema persistă poți să ne contactezi folosind ecranul Eu > Ajutor și suport.";
 
@@ -8745,7 +8767,7 @@ translators: Block name. %s: The localized block name */
 /* Message of Export Content confirmation alert; substitution is user's email address */
 "Your posts, pages, and settings will be mailed to you at %@." = "Articolele, paginile și setările ți se vor trimite prin email la %@.";
 
-/* Footer of the primary site section in the Domains dashboard. */
+/* Footer of the primary site section in the Domains Dashboard. */
 "Your primary site address is what visitors will see in their address bar when visiting your website." = "Adresa site-ului principal este ceea ce vor vedea vizitatorii în bara lor de adrese când îți vizitează site-ul.";
 
 /* Text displayed when a site restore takes too long. */
